<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PagarPlus</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id"/>
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token"/>
    <string name="lbl_sign_in">SIGN IN</string>
    <string name="lbl_enter_name">Enter Name</string>
    <string name="lbl_sign_in2">Sign In</string>
    <string name="lbl_user_name">Mobile Number *</string>
    <string name="lbl_mobilenum">Enter Mobile Number</string>
    <string name="lbl_enter_password">Enter Password</string>
    <string name="lbl_sign_in_with">Sign In With</string>
    <string name="lbl_password">Password *</string>
    <string name="lbl_remember_me">Remember Me</string>
    <string name="lbl_or">-OR-</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="msg_please_enter_valid_pa">Password length should be minimum 6 characters</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="lbl_good_to_go">Good To Go</string>
    <string name="msg_try_again_later">Try again later!!!</string>
    <string name="lbl_login_failed">Login failed</string>
    <string name="lbl_from_date"> From Date : </string>
    <string name="lbl_from_time"> From Time : </string>
    <string name="lbl_to_date">To Date : </string>
    <string name="lbl_to_time"> To Time: </string>
    <string name="msg_permission_grant">Permission Granted</string>
    <string name="msg_permission_deny">Permission Denied</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_education">Education</string>
    <string name="lbl_fathername">Father Name</string>
    <string name="lbl_dob">Date of Birth</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_replymsg">Reply Message</string>
    <string name="msg_writemsg">Write Message</string>
    <string name="lbl_my_reports">My Reports</string>
    <string name="lbl_my_attendance">My Attendance</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_expenses">Expenses</string>
    <string name="lbl_hi">Hi,</string>
    <string name="msg_my_notification">My Notifications</string>
    <string name="lbl_btnnotifications">Notifications</string>
    <string name="lbl_pavan">Pavan</string>
    <string name="lbl_my_expenses">My Expenses</string>
    <string name="lbl_apply_leave">Apply Leave</string>
    <string name="lbl_pavan_kumar">Pavan Kumar</string>
    <string name="lbl_apply_loan">Apply Loan</string>
    <string name="lbl_attendance">Attendance</string>
    <string name="lbl_reports">Reports</string>
    <string name="lbl_developer">Developer</string>
    <string name="msg_mwb_technologie">MWB Technologies</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_support">Support</string>
    <string name="lbl_rate_us">Rate Us</string>
    <string name="lbl_work_days">Working Days</string>
    <string name="lbl_attedence">Attendance</string>
    <string name="lbl_checkIn">Check In</string>
    <string name="lbl_checkOut">Check Out</string>
    <string name="lbl_attendanceReport">Attendance Details</string>
    <string name="lbl_Select_Expense_Type">Select Expense Type</string>
    <string name="lbl_Enter_Amount">Enter Amount</string>
    <string name="lbl_src_plc">Source Place:</string>
    <string name="lbl_dst_plc">Destination Place:</string>
    <string name="lbl_ent_place">Enter Place</string>
    <string name="lbl_ent_hotel">Enter Hotel Details</string>
    <string name="lbl_sel_date">Select Date:</string>
    <string name="lbl_exp_detail">Enter Local Expense Details</string>
    <string name="lbl_travelexp_detail">Enter Travel Expense Details</string>
    <string name="lbl_lodgingexp_detail">Enter Lodging Expense Details</string>
    <string name="lbl_dnsexp_detail">Enter DNS Expense Details</string>
    <string name="lbl_register_status">Status</string>
    <string name="lbl_city">City *</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="lbl_new_user">Owner SignUp</string>
    <string name="msg_organization_de">Organization Details</string>
    <string name="editprofile">Edit My Profile</string>
    <string name="lbl_state">State *</string>
    <string name="lbl_confirm_otp">Confirm OTP</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_send_otp">Send OTP</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_sign_up">Sign Up </string>
    <string name="lbl_mobile">Mobile Number *</string>
    <string name="msg_user_name_mob">User Name / Mobile</string>
    <string name="lbl_orgaddress">Address</string>
    <string name="lbl_address">Permanent Address</string>
    <string name="lbl_email_id">Email ID</string>
    <string name="lbl_firm_name">Organization Name *</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="lbl_login_status">Login Status</string>
    <string name="lbl_Profimage">Upload Logo</string>
    <string name="msgsucess">Registered Successfully</string>
    <string name="lbl_advertise">Advertise</string>
    <string name="lbl_advertiselist">Advertise List</string>
    <string name="lbl_approve_leave">Approve Leave</string>
    <string name="lbl_approve_loan">Approve Loan</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_delete_employee">Delete</string>
    <string name="msg_total_employees">Total Employees :</string>
    <string name="msg_travel_expense">Travel Expense :</string>
    <string name="lbl_search">search</string>
    <string name="lbl_admin">Admin</string>
    <string name="lbl_1">1</string>
    <string name="lbl_02">02</string>
    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="lbl_pavan_n_s">Pavan N S</string>
    <string name="lbl_4">4</string>
    <string name="lbl_5">5</string>
    <string name="lbl_view">View</string>
    <string name="lbl_300">300</string>
    <string name="lbl_giriraj">Giriraj</string>
    <string name="lbl_500">500</string>
    <string name="lbl_absent">Absent</string>
    <string name="lbl_absent_wcol">Absent</string>
    <string name="lbl_prajwal">Prajwal</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_create">Create</string>
    <string name="lbl_13">13</string>
    <string name="lbl_aditya">Aditya</string>
    <string name="lbl_dns_allowance">DNS Allowance :</string>
    <string name="lbl_manjunath">Manjunath</string>
    <string name="lbl_15">15</string>
    <string name="lbl_total_expense">Total Expense :</string>
    <string name="lbl_local_expense">Local Expense :</string>
    <string name="msg_lodging_and_boa">Lodging and Boarding :</string>
    <string name="lbl_share_link">Share link</string>
    <string name="lbl_1500">1500</string>
    <string name="lbl_expense">Expense</string>
    <string name="lbl_1000">1000</string>
    <string name="lbl_09_09_2022">09-09-2022</string>
    <string name="lbl_present">Present</string>
    <string name="lbl_create_view">Create/View</string>
    <string name="lbl_share">Share</string>
    <string name="emp_first_name">First Name *</string>
    <string name="lbl_create_employee">Create Employee</string>
    <string name="lbl_edit_employee">Edit Employee</string>
    <string name="lbl_add_old_balance">Add Old Balance</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_select_id">Select ID</string>
    <string name="lbl_paid_leave">Paid Leave</string>
    <string name="lbl_salary">Salary *</string>
    <string name="lbl_create_branch">Create Branch</string>
    <string name="lbl_create_dept">Create Department</string>
    <string name="lbl_driving_licence">Driving Licence</string>
    <string name="lbl_select_holidays">Select Holidays</string>
    <string name="lbl_select_branch">Select Branch</string>
    <string name="lbl_all_branch">All Branch</string>
    <string name="lbl_all_dept">All Department</string>
    <string name="lbl_sick_leave">Sick Leave</string>
    <string name="lbl_aadhar_card">Aadhar Card</string>
    <string name="msg_select_departme">Select Department</string>
    <string name="msg_upload_id">Upload ID Proofs (Any two)</string>
    <string name="msg_addbalance">Add Old Balance</string>
    <string name="lbl_front_image">Front Image</string>
    <string name="lbl_back_image">Back Image</string>
    <string name="lbl_advance">Loan Advances :</string>
    <string name="lbl_month_deduction">Monthly Deduction Rs.:</string>
    <string name="lbl_balance">Old Salary Balance :</string>
    <string name="lbl_comment">Add comment</string>
    <string name="lbl_searchbyEmp">Search by Employee Name</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_pan_card">PAN Card</string>
    <string name="lbl_id_proof">Upload ID Proof</string>
    <string name="lbl_voter_id">Voter ID</string>
    <string name="lbl_branch_name">Branch Name</string>
    <string name="lbl_dept_name">Department Name</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_location_map">Location Map</string>
    <string name="lbl_status">Status</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="google_maps_key">AIzaSyAn7YSvvdNfSLifI3HBv6Pu_4P4jVjIhig</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_emp_view">Employees List</string>
    <string name="lbl_slno">Sl.No</string>
    <string name="lbl_designation">Designation</string>
    <string name="lbl_dateofjoining">Date of joining *</string>
    <string name="msg_delete_emp">Are you sure you want to deactivate this employee?</string>
    <string name="msg_idproof_update">Are you sure you want to change ID Proofs Details ?</string>
    <string name="msg_update_emp">Are you sure you want to save changes made here?</string>
    <string name="msg_activate_emp">Are you sure you want to Activate this employee?</string>
    <string name="msg_idproof_confirmation">Would you like to add one more ID Proof?</string>
    <string name="add_image_confirmation">Would you like to add one more Image?</string>
    <string name="btn_prooceed">PROOCEED</string>
    <string name="btn_save">SAVE</string>
    <string name="lbl_bloodgroup">Blood Group</string>
    <string name="lbl_weekoff">Week Off</string>
    <string name="lbl_emergencynum">Guardian/Parent mobile number</string>
    <string name="lbl_checkintime">Office Start Time *</string>
    <string name="lbl_online_payment">Online Payment</string>
    <string name="lbl_click_image">Click Image</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_holiday">Holidays</string>
    <string name="lbl_expense_report">Expense Report</string>
    <string name="col_branch">Branch : </string>
    <string name="col_dept">Dept : </string>
    <string name="lbl_message">Messages</string>
    <string name="lbl_changelanguage" translatable="false">Change Language</string>
</resources>