<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="drawerItemUsermenuModel"
            type="com.pagarplus.app.modules.admindashboard.data.model.DrawerItemAdminmenuModel"/>
    </data>
    <FrameLayout
        android:id="@+id/frameMenu"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/linearColumnpawankumaroneOne"
            android:layout_gravity="start"
            android:elevation="@dimen/_5sp"
            android:background="@drawable/user_grad_back"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/myCardView"
                android:layout_width="@dimen/_70px"
                android:layout_height="@dimen/_70px"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_35pxh"
                app:cardCornerRadius="50dp"
                app:cardElevation="@dimen/_5pxv">

                <ImageView
                    android:id="@+id/roundedimage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_image1"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:ellipsize="end"
                android:id="@+id/txtMWBTechnologie"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_firm_name"
                style="@style/txtRobotoromanbold15"
                android:layout_gravity="center"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_32pxh">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView android:ellipsize="end"
                android:id="@+id/txtCreateBranch"
                android:layout_marginTop="@dimen/_15sp"
                android:paddingStart="@dimen/_15sp"
                android:paddingEnd="@dimen/_15sp"
                android:drawablePadding="@dimen/_15sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtRobotoromanbold15"
                android:text="@string/lbl_create_branch"
                app:drawableStartCompat="@drawable/ic_baseline_business_24" />

            <TextView android:ellipsize="end"
                android:id="@+id/txtCreateEmp"
                android:layout_marginTop="@dimen/_10sp"
                android:paddingStart="@dimen/_15sp"
                android:paddingEnd="@dimen/_15sp"
                android:drawablePadding="@dimen/_15sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtRobotoromanbold15"
                android:text="@string/lbl_create_employee"
                app:drawableStartCompat="@drawable/ic_baseline_supervised_user_circle_24" />

                <TextView android:ellipsize="end"
                    android:id="@+id/txtAdvertise"
                    android:paddingStart="@dimen/_15sp"
                    android:paddingEnd="@dimen/_15sp"
                    android:drawablePadding="@dimen/_15sp"
                    android:layout_marginTop="@dimen/_10sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    style="@style/txtRobotoromanbold15"
                    android:text="@string/lbl_advertise"
                    app:drawableStartCompat="@drawable/ic_baseline_image_24" />

                <TextView android:ellipsize="end"
                    android:id="@+id/txtExpenseReport"
                    android:paddingStart="@dimen/_15sp"
                    android:paddingEnd="@dimen/_15sp"
                    android:drawablePadding="@dimen/_15sp"
                    android:layout_marginTop="@dimen/_10sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    style="@style/txtRobotoromanbold15"
                    android:text="@string/lbl_expense_report"
                    app:drawableStartCompat="@drawable/ic_amount" />

                <TextView
                    android:ellipsize="end"
                    android:id="@+id/txtMessages"
                    android:paddingStart="@dimen/_15sp"
                    android:paddingEnd="@dimen/_15sp"
                    android:drawablePadding="@dimen/_15sp"
                    android:layout_marginTop="@dimen/_10sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    style="@style/txtRobotoromanbold15"
                    android:text="@string/lbl_message"
                    app:drawableStartCompat="@drawable/ic_baseline_message_24" />

                <TextView android:ellipsize="end"
                    android:id="@+id/txtHolidays"
                    android:paddingStart="@dimen/_15sp"
                    android:paddingEnd="@dimen/_15sp"
                    android:drawablePadding="@dimen/_15sp"
                    android:layout_marginTop="@dimen/_10sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    style="@style/txtRobotoromanbold15"
                    android:text="@string/lbl_holiday"
                    app:drawableStartCompat="@drawable/ic_calender" />

            <TextView android:ellipsize="end"
                android:id="@+id/txtReports"
                android:paddingStart="@dimen/_15sp"
                android:paddingEnd="@dimen/_15sp"
                android:drawablePadding="@dimen/_15sp"
                android:layout_marginTop="@dimen/_10sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtRobotoromanbold15"
                android:text="@string/lbl_reports"
                app:drawableStartCompat="@drawable/img_bxsreport" />

            <TextView android:ellipsize="end"
                android:id="@+id/txtNotifications"
                android:paddingStart="@dimen/_15sp"
                android:paddingEnd="@dimen/_15sp"
                android:drawablePadding="@dimen/_15sp"
                android:layout_marginTop="@dimen/_10sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtRobotoromanbold15"
                android:text="@string/lbl_btnnotifications"
                app:drawableStartCompat="@drawable/ic_notifications" />

            <TextView android:ellipsize="end"
                android:id="@+id/txtApplyLeave"
                android:paddingStart="@dimen/_15sp"
                android:paddingEnd="@dimen/_15sp"
                android:drawablePadding="@dimen/_15sp"
                android:layout_marginTop="@dimen/_10sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtRobotoromanbold15"
                android:text="@string/lbl_approve_leave"
                app:drawableStartCompat="@drawable/img_info" />

            <TextView android:ellipsize="end"
                android:id="@+id/txtApplyLoan"
                android:paddingStart="@dimen/_15sp"
                android:paddingEnd="@dimen/_15sp"
                android:drawablePadding="@dimen/_15sp"
                android:layout_marginTop="@dimen/_10sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtRobotoromanbold15"
                android:text="@string/lbl_approve_loan"
                app:drawableStartCompat="@drawable/img_info_14x24" />

            <TextView android:ellipsize="end"
                android:id="@+id/txtEditProfile"
                android:paddingStart="@dimen/_15sp"
                android:paddingEnd="@dimen/_15sp"
                android:drawablePadding="@dimen/_15sp"
                android:layout_marginTop="@dimen/_10sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtRobotoromanbold15"
                android:text="@string/lbl_edit_profile"
                app:drawableStartCompat="@drawable/ic_profile" />

            <TextView android:ellipsize="end"
                android:id="@+id/txtPayment"
                android:paddingStart="@dimen/_15sp"
                android:paddingEnd="@dimen/_15sp"
                android:drawablePadding="@dimen/_15sp"
                android:layout_marginTop="@dimen/_10sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtRobotoromanbold15"
                android:text="@string/lbl_online_payment"
                app:drawableStartCompat="@drawable/ic_amount" />

            <TextView android:ellipsize="end"
                android:id="@+id/txtHelp"
                android:paddingStart="@dimen/_15sp"
                android:paddingEnd="@dimen/_15sp"
                android:drawablePadding="@dimen/_15sp"
                android:layout_marginTop="@dimen/_10sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtRobotoromanbold15"
                android:text="@string/lbl_help"
                app:drawableStartCompat="@drawable/ic_help" />

            <TextView android:ellipsize="end"
                android:id="@+id/txtSupport"
                android:paddingStart="@dimen/_15sp"
                android:paddingEnd="@dimen/_15sp"
                android:drawablePadding="@dimen/_15sp"
                android:layout_marginTop="@dimen/_10sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtRobotoromanbold15"
                android:text="@string/lbl_support"
                app:drawableStartCompat="@drawable/ic_suppoer" />

            <TextView android:ellipsize="end"
                android:id="@+id/txtRateUs"
                android:paddingStart="@dimen/_15sp"
                android:paddingEnd="@dimen/_15sp"
                android:drawablePadding="@dimen/_15sp"
                android:layout_marginTop="@dimen/_10sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtRobotoromanbold15"
                android:text="@string/lbl_rate_us"
                app:drawableStartCompat="@drawable/ic_star_rate" />

                <TextView android:ellipsize="end"
                    android:id="@+id/txtChgLang"
                    android:paddingStart="@dimen/_15sp"
                    android:paddingEnd="@dimen/_15sp"
                    android:drawablePadding="@dimen/_15sp"
                    android:layout_marginTop="@dimen/_10sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    style="@style/txtRobotoromanbold15"
                    android:text="@string/lbl_changelanguage"
                    app:drawableStartCompat="@drawable/ic_baseline_translate_24" />

                <TextView android:ellipsize="end"
                android:id="@+id/txtLogout"
                android:paddingStart="@dimen/_15sp"
                android:layout_marginTop="@dimen/_10sp"
                android:paddingEnd="@dimen/_15sp"
                android:drawablePadding="@dimen/_15sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtRobotoromanbold15"
                android:text="@string/lbl_logout"
                app:drawableStartCompat="@drawable/img_floatingicon" />

            </LinearLayout>
        </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/indigo_A700"
                android:layout_gravity="end|bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCurVersion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="Current Version 1.0"
                    android:textSize="12dp"
                    android:gravity="center"/>
u
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>

                <TextView
                    android:id="@+id/txtUpgrade"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="Upgrade"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
